--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
+        "league/flysystem": "^2.5",
+        "league/flysystem-aws-s3-v3": "^2.5",
+        "league/flysystem-memory": "^2.0",
         "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
