--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "league/flysystem": "^2.5",
         "league/flysystem-aws-s3-v3": "^2.5",
         "league/flysystem-memory": "^2.0",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "ext-json": "*"
     },
     "require-dev": {
         "cakephp/bake": "^2.6",
